# saved-ai

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml
ai-services/: .dockerignore  .gitattributes  .gitignore  Dockerfile  docker-compose.yml  experts.csv  export_db.py  export_neo.py  local.sh  logs.txt  new_table.py  pyproject.toml  redis.conf  setup.py  test.py
ai-services/.config/: dmoji_script.sh
ai-services/.initialization_complete/: init.done
ai-services/ai_services_api/: main.py
ai-services/ai_services_api/controllers/: chatbot_router.py  message_router.py  recommendation_router.py  search_router.py  test_router.py
ai-services/ai_services_api/core/: config.py  openapi.py
ai-services/ai_services_api/services/analytics/: app.py
ai-services/ai_services_api/services/analytics/analytics/: adaptive_analytics.py  chat_analytics.py  content_analytics.py  expert_analytics.py  overview_analytics.py  resource_analytics.py  search_analytics.py  usage_analytics.py
ai-services/ai_services_api/services/analytics/components/: sidebar.py
ai-services/ai_services_api/services/analytics/utils/: logger.py  theme.py
ai-services/ai_services_api/services/centralized_repository/: ai_summarizer.py  database_manager.py  database_setup.py  db_utils.py  monthly_setup.py  publication_processor.py  redis_handler.py  text_processor.py
ai-services/ai_services_api/services/chatbot/: database_manager.py  main.py  schemas.py
ai-services/ai_services_api/services/chatbot/scrape/: new_db.py  processing.py  (+2 more)
ai-services/ai_services_api/services/message/: main.py
ai-services/ai_services_api/services/models/: chunk_mapping.pkl  faiss_index.idx
ai-services/ai_services_api/services/recommendation/: config.py  graph_initializer.py  main.py  new.py  test.py
ai-services/ai_services_api/services/search/: app.py  main.py
ai-services/ai_services_api/templates/: chatbot.html  content.html  index.html  recommendations.html  search.html  summary.html
ai-services/ai_services_api/tests/: db_utils.py  test_chatbot.py  test_recommendation.py  test_search.py
ai-services/airflow/dags/: expert_update_dag.py  monthly_research_processing_dag.py  publications_dag.py  webpage_processing.py
ai-services/scripts/: init-airflow.sh  init-script.sh
ai-services/src/: pipeline.py
ai-services/src/config/: settings.py
ai-services/src/embeddings/: message_handler.py.bak
ai-services/src/scrapers/: pdf_processor.py.bak  web_scraper.py
ai-services/src/utils/: db_utils.py  redis_handler.py
(+63 files in other folders)
